2012-04-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c src/svg.trm:  Backport fix for toggling multiplots.

	* src/breaders.c src/datafile.c src/datafile.h src/plot2d.c
	src/plot3d.c src/stats.c:
	Try to report the name of the datafile in which an error was found.
	Handles plot, splot, and stats but not fit.

2012-04-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (iso_alloc iso_extend):  Initialize each 3D coordinate
	structure on allocation.  Fixes problems found by valgrind and easily
	seen by running imageNaN.dem.

2012-04-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (copy_or_invent_formatstring):  Expansion to many decimal
	places of precision is not necessary if the axis range spans 0, because
	in that case exponential notation can be used instead.
	Bug #3514604

2012-04-01  Hannes Nagel  <hannes.nagel@itp.uni-leipzig.de>

	* term/lua.term: Do not create external png images if they are not 
	going to be used in the tex document.

2012-03-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c term/post.trm term/pslatex.trm src/term_api.h src/color.c:
	The core code should not write terminal-specific output.  Instead define
	TERM_LAYER_BEGIN_PM3D_MAP and TERM_LAYER_END_PM3D_MAP and use the 
	term->layer() mechanism.  This prevents garbage from being written out
	to the cairolatex terminals in pm3d mode.
	Bug #3513291

2012-03-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_polygon): Always stroke
	previous path before starting a new polygon.  Also, dots are slow.
	Only draw them if specifically requested.
	Bug #3512955

2012-03-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion): Revised handling of backslash
	character in enhanced text processing.
	Bug #3496517

2012-03-16  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm term/svg.trm:  
	Do not allow execution of popen() commands during initialization.
